--- a/styles/reserve-collegiale.less
+++ b/styles/reserve-collegiale.less
@@ -1,3 +1,14 @@
+body {
+  &.theme-light {
+    #penombre-reserve-collegiale {
+      .div-jetons-2 {
+        background-color: @background-light; // Si et seulement si on est en mode clair (et pas sombre) de la fiche
+      }
+    }
+  }
+}
+
+
 #penombre-reserve-collegiale {
   padding: none;
 
