--- a/penombre.css
+++ b/penombre.css
@@ -101,9 +101,11 @@ penombre-toggle-switch[checked] thumb {
 /* ---------------------------------------------
         Thème Clair
 --------------------------------------------- */
-/* ---------------------------------------------
-          Thème Sombre
+body {
+  /* ---------------------------------------------
+        Thème Sombre
 --------------------------------------------- */
+}
 body.theme-light .penombre.eminence .eminence-content {
   background-color: #faeed6;
 }
@@ -125,6 +127,7 @@ body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-ti
   color: #56605b;
 }
 body.theme-light .penombre.eminence .eminence-content .eminence-timbre .datas-timbre .col-2-2 {
+  margin-top: 30px;
   float: left;
   width: 101px;
 }
@@ -268,7 +271,34 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   margin-left: 140px;
   margin-top: -84px;
 }
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div img.case-ronde-note {
+  width: 20px;
+  height: 20px;
+}
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div img.case-ronde-note1 {
+  margin-left: 20px;
+  margin-top: 20px;
+}
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div img.case-ronde-note2 {
+  margin-left: 60px;
+  margin-top: -35px;
+}
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div img.case-ronde-note3 {
+  margin-left: 100px;
+  margin-top: -35px;
+}
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div img.case-ronde-note4 {
+  margin-left: 140px;
+  margin-top: -35px;
+}
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div img.case-ronde-cle {
+  margin-left: -40px;
+  margin-top: 10px;
+  width: 25px;
+  height: 25px;
+}
 .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-2-2 {
+  margin-top: 30px;
   float: left;
   width: 101px;
 }
@@ -409,7 +439,7 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   text-align: center;
 }
 .penombre.eminence .eminence-content .eminence-personnage .data .description {
-  font-size: 29px;
+  font-size: 19px;
   color: #124b63;
   text-align: center;
 }
@@ -1096,6 +1126,9 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 }
 .penombre.action .action-content .standard-form .logo-frame .name {
   width: calc(100% - 90px);
+}
+body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
+  background-color: #faeed6;
 }
 #penombre-reserve-collegiale {
   padding: none;
