--- a/templates/eminence/partials/timbre.hbs
+++ b/templates/eminence/partials/timbre.hbs
@@ -6,13 +6,6 @@
     </div>
     <div class="datas-timbre">
     {{#if unlocked}}
-    {{formGroup systemFields.timbre.fields.description value=systemSource.timbre.description localize=true}}
-    {{formGroup systemFields.timbre.fields.cle value=systemSource.timbre.cle localize=true}}
-    {{formGroup systemFields.timbre.fields.note1 value=systemSource.timbre.note1 localize=true}}
-    {{formGroup systemFields.timbre.fields.note2 value=systemSource.timbre.note2 localize=true}}
-    {{formGroup systemFields.timbre.fields.note3 value=systemSource.timbre.note3 localize=true}}
-    {{formGroup systemFields.timbre.fields.note4 value=systemSource.timbre.note4 localize=true}}
-    {{formGroup systemFields.timbre.fields.statut value=systemSource.timbre.statut localize=true}}
     {{formGroup systemFields.timbre.fields.peste value=systemSource.timbre.peste localize=true}}
     {{else}}
       <div class="col-1-2">
@@ -23,15 +16,19 @@
           <span>.......................................................................................</span>
           <span>.......................................................................................</span>
           <span>.......................................................................................</span>
-          <label class="croche note1">&#119136;</label>
-          <label class="croche note2">&#119136;</label>
-          <label class="croche note3">&#119136;</label>
-          <label class="croche note4">&#119136;</label>
+          {{#times 4}}
+            <label class="croche note{{@index}}">&#119136;</label>
+          {{/times}}
+            <img class="case-ronde-note case-ronde-note1" data-action="note" data-index="1" src="systems/penombre/assets/ui/cercle_case_{{#if systemSource.timbre.note1}}checked{{else}}unchecked{{/if}}.png"></img>
+            <img class="case-ronde-note case-ronde-note2" data-action="note" data-index="2" src="systems/penombre/assets/ui/cercle_case_{{#if systemSource.timbre.note2}}checked{{else}}unchecked{{/if}}.png"></img>
+            <img class="case-ronde-note case-ronde-note3" data-action="note" data-index="3" src="systems/penombre/assets/ui/cercle_case_{{#if systemSource.timbre.note3}}checked{{else}}unchecked{{/if}}.png"></img>
+            <img class="case-ronde-note case-ronde-note4" data-action="note" data-index="4" src="systems/penombre/assets/ui/cercle_case_{{#if systemSource.timbre.note4}}checked{{else}}unchecked{{/if}}.png"></img>
+            <img class="case-ronde-cle" data-action="note" data-index="0" src="systems/penombre/assets/ui/cercle_case_{{#if systemSource.timbre.cle}}checked{{else}}unchecked{{/if}}.png"></img>
         </div>
       </div>
       <div class="col-2-2">
         {{#each systemFields.timbre.fields.statut.choices as |choice id|}}
-        <img class="statut-timbre-case" src="systems/penombre/assets/ui/transp_case_{{#if (eq ../system.timbre.statut @id)}}checked{{else}}unchecked{{/if}}.png" />
+        <img class="statut-timbre-case" data-action="statut" data-index="{{@id}}" src="systems/penombre/assets/ui/transp_case_{{#if (eq ../system.timbre.statut @id)}}checked{{else}}unchecked{{/if}}.png" />
         <span>{{localize choice.label}}</span>
         {{/each}}
       </div>
