--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -464,6 +464,9 @@ body {
               .col-3-2 {
                 margin-left: 313px;
                 width: calc(100% - 313px);
+                .peste-texte {
+                  margin-top: 9px;
+                }
               }
             }
         }  
