--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -571,6 +571,7 @@ body {
       // Hauteurs spécifiques
       .eminence-personnage {
         min-height: 250px;
+        height: auto;
         color: @color-primary;
         .logo-frame {
           display: table;
