--- a/templates/eminence/partials/personnage.hbs
+++ b/templates/eminence/partials/personnage.hbs
@@ -1,4 +1,4 @@
-<div class="eminence-personnage">
+<div class="eminence-personnage{{#if (or isStyleJeuStandard isStyleJeuAvance)}}-2{{/if}}">
   <div class="col-1-1 text-vertical-personnage">{{localize "PENOMBRE.ui.section.personnage"}}</div>
   <div class="col-2-1 frise-verticale">
     <img src="/systems/penombre/assets/ui/marron.png" alt="|" />
