caractère losange à la place barre oblique conscience

--- a/templates/eminence/partials/conscience.hbs
+++ b/templates/eminence/partials/conscience.hbs
@@ -12,7 +12,7 @@
           {{formGroup systemFields.conscience.fields.max value=systemSource.conscience.max localize=true}}
       {{else}}
           <div class="form-group ligne-conscience">
-            <label>{{localize "PENOMBRE.ui.conscienceDispo"}}</label><span>{{nbJetonsRestantsConscience}}</span><span>/</span><label>{{localize "PENOMBRE.ui.conscienceVal"}}</label><span>{{system.conscience.valeur}}</span><span>/</span><label>{{localize "PENOMBRE.ui.conscienceMax"}}</label><span>{{system.conscience.max}}</span>
+            <label>{{localize "PENOMBRE.ui.conscienceDispo"}}</label><span>{{nbJetonsRestantsConscience}}</span><span>&#9670;</span><label>{{localize "PENOMBRE.ui.conscienceVal"}}</label><span>{{system.conscience.valeur}}</span><span>&#9670;</span><label>{{localize "PENOMBRE.ui.conscienceMax"}}</label><span>{{system.conscience.max}}</span>
           </div>
       {{/if}}
 
