--- a/styles/chat.less
+++ b/styles/chat.less
@@ -50,6 +50,16 @@
     }
     .message-content {
       .dice-roll.penombre {
+        .roll-title {
+          font-family: "CattedraleDemo";
+          font-size: 1.1rem;
+          text-align: center;
+        }
+        .roll-results {
+          font-family: "CattedraleDemo";
+          font-size: 1.1rem;
+          text-align: center;
+        }
         .participate-container {
           display: flex;
           justify-content: space-between;
