--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -42,7 +42,7 @@
 --------------------------------------------- */
 @font-face {
   font-family: @font-cattedrale;
-  src: url(/systems/penombre/fonts/Cattedrale-Demo/Cattedrale-Demo-Regular.ttf);
+  src: url(/systems/penombre/fonts/cattedrale-regular.otf);
 }
 
 @font-face {
