--- a/styles/chat.less
+++ b/styles/chat.less
@@ -37,6 +37,7 @@
         margin-right: 4px;
       }
       .title {
+        font-family: "Cattedrale";
         font-size: 18px;
         font-weight: bold;
         display: inline;
@@ -51,12 +52,12 @@
     .message-content {
       .dice-roll.penombre {
         .roll-title {
-          font-family: "CattedraleDemo";
+          font-family: "Cattedrale";
           font-size: 1.1rem;
           text-align: center;
         }
         .roll-results {
-          font-family: "CattedraleDemo";
+          font-family: "Cattedrale";
           font-size: 1.1rem;
           text-align: center;
         }
