--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -16,7 +16,7 @@
           align-items: center;
 
           label {
-            font-family: "CattedraleDemo";
+            font-family: "Cattedrale";
             font-size: 1.8rem;
             width: 140px;
             padding-right: 10px;
