--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -14,7 +14,7 @@
 @color-blue: #124b63; // Bleu
 
 // Polices
-@font-cattedrale: "CattedraleDemo";
+@font-cattedrale: "Cattedrale";
 @font-chocolate: "ChocoCovRainBold";
 @font-notomusic: "NotoMusic";
 
