--- a/penombre.css
+++ b/penombre.css
@@ -47,7 +47,7 @@ penombre-toggle-switch[checked] thumb {
         Fonts
 --------------------------------------------- */
 @font-face {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   src: url(/systems/penombre/fonts/cattedrale-regular.otf);
 }
 @font-face {
@@ -75,7 +75,7 @@ penombre-toggle-switch[checked] thumb {
         Concerne les pages de journaux
 --------------------------------------------- */
 .journal-header input {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
 }
 .journal-entry-page h1,
 .journal-entry-page h2,
@@ -83,7 +83,7 @@ penombre-toggle-switch[checked] thumb {
 .journal-entry-page h4,
 .journal-entry-page h5,
 .journal-entry-page h6 {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   color: #a56135;
 }
 /* ---------------------------------------------
@@ -95,7 +95,7 @@ penombre-toggle-switch[checked] thumb {
 .penombre .editor-content h4,
 .penombre .editor-content h5,
 .penombre .editor-content h6 {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   color: #a56135;
 }
 /* ---------------------------------------------
@@ -186,7 +186,7 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 }
 .penombre.eminence .eminence-content {
   overflow: auto;
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   color: #a56135;
   font-size: 17px;
   clear: both;
@@ -488,7 +488,7 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   height: 32px;
 }
 .penombre.eminence .eminence-content .eminence-conscience-locked .col-3-1 .col-1-3 .ligne-conscience label {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   display: inline-block;
   width: 120px;
   font-weight: bold;
@@ -1250,7 +1250,7 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
   align-items: center;
 }
 .penombre-roll-dialog .line-1 .part-left-1 fieldset .harmonique label {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   font-size: 1.8rem;
   width: 140px;
   padding-right: 10px;
@@ -1399,6 +1399,7 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
 }
 #interface #sidebar .chat-message .message-header .title,
 #interface #ui-right-column-1 .chat-message .message-header .title {
+  font-family: "Cattedrale";
   font-size: 18px;
   font-weight: bold;
   display: inline;
@@ -1412,13 +1413,13 @@ body.theme-light #penombre-reserve-collegiale .div-jetons-2 {
 }
 #interface #sidebar .chat-message .message-content .dice-roll.penombre .roll-title,
 #interface #ui-right-column-1 .chat-message .message-content .dice-roll.penombre .roll-title {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   font-size: 1.1rem;
   text-align: center;
 }
 #interface #sidebar .chat-message .message-content .dice-roll.penombre .roll-results,
 #interface #ui-right-column-1 .chat-message .message-content .dice-roll.penombre .roll-results {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   font-size: 1.1rem;
   text-align: center;
 }
@@ -1573,7 +1574,7 @@ body.theme-light .penombre.adversaire .adversaire-content {
   margin-bottom: 10px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom label {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom input {
   text-align: left;
@@ -1585,11 +1586,11 @@ body.theme-light .penombre.adversaire .adversaire-content {
   font-size: 1.8rem;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom.locked .name {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   color: #124b63;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .nom.locked .description {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   color: #a47c64;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite {
@@ -1604,7 +1605,7 @@ body.theme-light .penombre.adversaire .adversaire-content {
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut label {
   align-self: center;
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   display: inline-block;
   width: 120px;
   font-weight: bold;
@@ -1618,7 +1619,7 @@ body.theme-light .penombre.adversaire .adversaire-content {
   width: 120px;
 }
 .penombre.adversaire .adversaire-content .adversaire-main .adversaire-personnage .infos .adversite .attribut .harmonique {
-  font-family: "CattedraleDemo";
+  font-family: "Cattedrale";
   margin: 0 5px;
   width: 70px;
   text-align: left;
