--- a/styles/dialog.less
+++ b/styles/dialog.less
@@ -61,7 +61,7 @@
 
       .atouts {
         overflow-y: auto;
-        height: 120px;
+        height: 145px;
         border: solid;
         border-width: 1px;
         border-color: gray;
@@ -92,7 +92,8 @@
       .bonus-total {
         display: flex;
         flex-direction: row;
-        justify-content: flex-start;
+        // justify-content: flex-start;
+        justify-content: flex-end;
         align-items: center;
 
         label {
@@ -139,6 +140,8 @@
       .depensetotal {
         float: left;
         width: 100%;
+        display: flex;
+        align-items: center;
 
         label {
           width: 200px;
