--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -162,15 +162,18 @@
         Concerne l'editor
 --------------------------------------------- */
 .penombre {
-  .editor-content {
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      font-family: @font-cattedrale;
-      color: @color-primary;
+  .editor {
+    min-height: 100%;
+    .editor-content {
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: @font-cattedrale;
+        color: @color-primary;
+      }
     }
   }
 }
